[package]
    edition = "2024"
    name    = "gsearch"
    version = "0.1.0"

[lib]
    crate-type = [
        "cdylib",
    ]

[dependencies]
    abi_stable = "0.11.1"
    anyrun-plugin = { path = "../../anyrun-plugin" }
    chromiumoxide = { version = "0.7.0", features = [
        "tokio-runtime",
    ] }
    fake_user_agent = "0.2.1"
    futures = "0.3.31"
    headless_chrome = "1.0.17"
    reqwest = { version = "0.11.16", features = [
        "blocking",
        "json",
    ] }
    ron = "0.8.0"
    scraper = "0.23.1"
    serde = { version = "1.0.160", features = [
        "derive",
    ] }
    sysinfo = "0.34.2"
    tempfile = "3.19.1"
    tokio = { version = "1.44.2", features = [
        "full",
    ] }
