[package]
    edition = "2024"
    name    = "gsearch"
    version = "0.1.0"

[dependencies]
    bincode = { version = "2.0.1", features = [
        "serde",
    ] }
    chromiumoxide = { version = "0.7.0", features = [
        "tokio-runtime",
    ] }
    fake_user_agent = "0.2.1"
    futures = "0.3.31"
    reqwest = { version = "0.12.15", features = [
        "blocking",
        "json",
    ] }
    scraper = "0.23.1"
    serde = { version = "1.0.219", features = [
        "derive",
    ] }
    sublime_fuzzy = "0.7.0"
    sysinfo = "0.34.2"
    tempfile = "3.19.1"
    tokio = { version = "1.44.2", features = [
        "full",
    ] }
